[package]
name = "config-crate"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
