[package]
name = "options-wheel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "options-wheel"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
alpaca-client = { path = "../alpaca-client" }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
